category_list.css
:root {
  /*colorscheme*/
  --background: #DAD7CD; /*dust grey*/
  --text: #000000; /*black*/
  --light: #A3B18A; /*Dry Sage*/
  --medium: #588157; /*Fern*/
  --dark: #3A5A40; /*Hunter Green*/
  --extra-dark: #344E41; /*Pine Teal*/
}

body {
  background-color: var(--background);
}

header {
  background-color: var(--medium);
  display: flex;
  justify-content: space-between;
}

.title {
  color: var(--text);
}

.navigation {
  margin: 30px 0px 0px 0px;
}

.imageRow {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  position: center;
  padding: 25px 20% 0px 20%
}

.coverImage {
  position: relative;
}

.coverImage img {
  width: 500px;
  height: 500px;
  object-fit: cover;
  border-radius: 12px;
}

.overlay {
  position: absolute;
  top: 240px;
  left: 50%;
  background-color: var(--extra-dark);
  padding: 0px 15px 0px 15px;
  transform: translateX(-50%);
  pointer-events: none;
  flex-direction: column;
  gap: 5px;
}

